# temp-mail-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml  test.yml
examples/: basic_usage.py
tempmail/: __init__.py  async_client.py  client.py  exceptions.py  models.py
tests/: test_async_client.py  test_client.py
